--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ about-author:   Le riviste letterarie pinzate assieme. I racconti per data di us
 # Social settings
 social-twitter:   artemsheludko_
 social-facebook:
-social-github:    artemsheludko
-social-pinterest: artemsheludko
+social-github:    
+social-pinterest: 
 social-instagram: artemsheludko_
 social-youtube:
 social-vk:   
