--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ author-twitter: artemsheludko_ # Add your twitter account
 about-author:   Le riviste letterarie pinzate assieme. I racconti per data di uscita nella home e organizzati per rivista nella sezione categorie.
 
 # Social settings
-social-twitter:   artemsheludko_
+social-twitter:
 social-facebook:
-social-github:    
+social-github:   
 social-pinterest: 
 social-instagram: artemsheludko_
 social-youtube:
