--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ author-image:   1.jpg
 author-job:     Rviste letterie 📚 | Racconti 😊| Belle cose ✨
 author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
+author-instagram: rivisteria # Add your instagram account
 about-author:   Le riviste letterarie pinzate assieme. I racconti per data di uscita nella home e organizzati per rivista nella sezione categorie.
 
 # Social settings
