--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ author-twitter: artemsheludko_ # Add your twitter account
 author-instagram: rivisteria # Add your instagram account
 about-author:   Le riviste letterarie pinzate assieme. I racconti per data di uscita nella home e organizzati per rivista nella sezione categorie.
 
+# Copyrighr
+copyright-name: Mario Barbarino
+
 # Social settings
 social-twitter:
 social-facebook:
