--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 # Author
 author-name:    La rivisteria
 author-image:   1.jpg
-author-job:     Rviste letterie 📚 | Racconti 😊| Belle cose ✨
+author-job:     Riviste letterie 📚 | Racconti 😊| Belle cose ✨
 author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
 author-instagram: rivisteria # Add your instagram account
