--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: La rivisteria
+title: La rivisteria (PROVA)
 description: Le riviste letterarie pinzate assieme
 baseurl: "" # the subpath of your site, e.g. /blog
 #url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
