--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author-job:     Riviste letterie 📚 | Racconti 😊| Belle cose ✨
 author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-twitter: # Add your twitter account
 author-instagram: larivisteria # Add your instagram account
-about-author:   Le riviste letterarie pinzate assieme. I racconti per data di uscita nella home e organizzati per rivista nella sezione categorie. [Manifesto e copyright]({% post_url 2020-10-26-Manifesto %})
+about-author:   Le riviste letterarie pinzate assieme. I racconti per data di uscita nella home e organizzati per rivista nella sezione categorie.
 
 # Copyright
 copyright-name: Mario Barbarino
