--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ social-twitter:
 social-facebook:
 social-github:   
 social-pinterest: 
-social-instagram: larivisteria
+social-instagram:
 social-youtube:
 social-vk:   
 social-linkedin:
