--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-formspree:   f/xeqpkkjq # Add your Formspree endpoint
 author-twitter: # Add your twitter account
 author-instagram: larivisteria # Add your instagram account
-about-author:   Sugli scaffali della Rivisteria, ogni giorno freschi di stampa, i racconti e gli articoli di molte riviste letterarie.
+about-author:   Sugli scaffali della Rivisteria, ogni giorno freschi di stampa, i racconti e gli articoli delle migliori riviste letterarie online.
 
 # Copyright
 copyright-name: Mario Barbarino
