--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-formspree:   f/xeqpkkjq # Add your Formspree endpoint
 author-twitter: # Add your twitter account
 author-instagram: larivisteria # Add your instagram account
-about-author:   Sugli scaffali della Rivisteria, ogni giorno freschi di stampa, i racconti e gli articoli delle migliori riviste letterarie online.
+about-author:   Sugli scaffali de la Rivisteria, ogni giorno freschi di stampa, i racconti e gli articoli delle migliori riviste letterarie online.
 
 # Copyright
 copyright-name: Mario Barbarino
@@ -33,7 +33,7 @@ mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.
 google-analytics: G-6JKZTEBSJ9 # Add your identifier. For example UA-99631805-1
 
 # Comment Section (Disqus)
-disqus-identifier: larivisteria # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: https://mariobarbarino-github-io.disqus.com/embed.js # Add your shortname for Disqus Comment. For example mr-brown
 
 # Build settings
 markdown: kramdown
