--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author-instagram: larivisteria # Add your instagram account
 about-author:   Sugli scaffali de la Rivisteria, ogni giorno freschi di stampa, i racconti e gli articoli delle migliori riviste letterarie online.
 
 # Copyright
-copyright-name: Mario Barbarino
+copyright-name: la Rivisteria
 
 # Social settings
 social-twitter:
