--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.
 google-analytics: G-6JKZTEBSJ9 # Add your identifier. For example UA-99631805-1
 
 # Comment Section (Disqus)
-disqus-identifier: https://mariobarbarino-github-io.disqus.com/embed.js # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: mr-brown #https://mariobarbarino-github-io.disqus.com/embed.js # Add your shortname for Disqus Comment. For example mr-brown
 
 # Build settings
 markdown: kramdown
