--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 # Author
 author-name:    la Rivisteria
-author-image:   img-profilo20201108.png
+author-image:   img-profilo20201108.jpg
 author-job:     80+ riviste letterarie 📚 | 1000+ racconti 💬
 author-email:   rivisteria@gmail.com # Add your email for contant form.
 author-formspree:   f/xeqpkkjq # Add your Formspree endpoint
